# tinygles

./: .gitignore  CMakeLists.txt  README.md  regenerate_projects.bat
media/: imgui.ini
media/shaders/: gouraud_frag_2.glsl  gouraud_vert_2.glsl  multitexture_frag_2.glsl  multitexture_vert_2.glsl  phong_frag_2.glsl  phong_vert_2.glsl
samples/00-hellotriangle/: CMakeLists.txt  HelloTriangle.cpp
samples/01-vertexshader/: CMakeLists.txt  VertexShader.cpp
scripts/: genie.lua  toolchain.lua
sources/: Application.cpp  Application.h  CMakeCommon.cmake  CMakeLists.txt  Config.h.in  DynLibLoader.cpp  DynLibLoader.h  EGLApi.h  EGLPlatformContext.cpp  EGLPlatformContext.h  EGLTrampoline.cpp  EGLTrampoline.h  HelloTriangle.cpp  IPlatformContext.h  Log.cpp  PlatformBridge.cpp  PlatformBridge.h  PlatformTypes.h  StringUtils.cpp  StringUtils.h  Vector.h  main.cpp  make_unique.h
sources/samples/00-hellotriangle/: CMakeLists.txt  HelloTriangle.cpp
sources/samples/01-vertexshader/: CMakeLists.txt  VertexShader.cpp
sources/samples/02-directionallighting/: CMakeLists.txt  DirectionalLighting.cpp
sources/samples/02-gouraudshading/: CMakeLists.txt  GouraudShading.cpp
sources/samples/02-vertexlighting/: CMakeLists.txt  PerVertexLighting.cpp
sources/samples/03-phongshading/: CMakeLists.txt  PhongShading.cpp
sources/samples/03-pixellighting/: CMakeLists.txt  PerPixelLighting.cpp
sources/samples/03-simpletexture/: CMakeLists.txt  SimpleTexture.cpp
sources/samples/04-multitexture/: CMakeLists.txt  MultiTexture.cpp
sources/samples/04-simplemipmapping/: CMakeLists.txt  SimpleMipmapping.cpp
sources/samples/04-simpletexture/: CMakeLists.txt  SimpleTexture.cpp
sources/samples/05-simplemipmapping/: SimpleMipmapping.cpp
sources/samples/common/: CMakeLists.txt  ExampleBaseApp.cpp  ExampleBaseApp.h
sources/tinygles/: CMakeLists.txt
sources/tinygles/include/: Application.h  GeometryUtil.h  PlatformBridge.h  PlatformDefine.h  PlatformTypes.h  Renderer.h  ShadersUtil.h  TransformHelper.h
sources/tinygles/include/math/: Angle.h  Array.h  Matrix4.h  Vector3.h  Vector4.h
sources/tinygles/src/: DynLibLoader.cpp  EGLPlatformContext.cpp  EGLPlatformContext.h  EGLTrampoline.h  GeometryUtil.cpp  Renderer.cpp  ShadersUtil.cpp  Shapes.cpp  StringUtils.cpp  TransformHelper.cpp  main.cpp
sources/tinygles/tests/: test_mathlib_angle.cpp  test_mathlib_array.cpp  test_mathlib_matrix4.cpp  test_mathlib_vector3.cpp  test_mathlib_vector4.cpp
sources/tinyngine/: CMakeLists.txt
sources/tinyngine/include/: Application.h  Engine.h  GeometryUtil.h  GraphicsDevice.h  GraphicsTypes.h  ImageLoader.h  ImageManager.h  Input.h  Log.h  MeshLoader.h  PlatformDefine.h  PlatformTypes.h  Renderer.h  ShadersUtil.h  StopWatch.h  StringUtils.h  System.h  Time.h  TransformHelper.h  VertexFormat.h
sources/tinyngine/src/: Application.cpp  DynLibLoader.cpp  DynLibLoader.h  EGLPlatformContext.cpp  EGLPlatformContext.h  EGLTrampoline.cpp  Engine.cpp  EventQueue.h  GLApi.cpp  GLApi.h  GeometryUtil.cpp  IPlatformBridge.h  IPlatformContext.h  ImGUIWrapper.cpp  ImGUIWrapper.h  ImageLoader.cpp  ImageManager.cpp  IndexBufferGL.h  InputWin32.cpp  InputWin32.h  Log.cpp  MeshLoader.cpp  PlatformBridgeWin32.cpp  PlatformBridgeWin32.h  ProgramGL.cpp  ProgramGL.h  RendererGL.cpp  RendererGL.h  ShaderGL.cpp  ShaderGL.h  ShadersUtil.cpp  SpScLockFreeQueue.h  StopWatchWin32.cpp  StopWatchWin32.h  StringUtils.cpp  StringUtils.h  Time.cpp  TransformHelper.cpp  VertexBufferGL.cpp  VertexFormat.cpp  (+2 more)
sources/tinyngine/src/gl/: EGLPlatformContext.cpp  GLApi.cpp  GLApi.h  GraphicsDeviceGL.cpp  GraphicsDeviceGL.h  IndexBufferGL.cpp  ProgramGL.cpp  ProgramGL.h  ShaderGL.cpp  ShaderGL.h  TextureGL.cpp  TextureGL.h  VertexBufferGL.h  WGLApi.h
